fixed layering z-index

--- a/find_classes_page/find_classes.css
+++ b/find_classes_page/find_classes.css
@@ -14,6 +14,7 @@ body {
   bottom: 0px;
   height: 10vh;
   overflow: scroll;
+  z-index: 100;
 
 
 }
